--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,32 @@
   height: 100px;
 }
 
+h1{
+  font-size: 4vw;
+}
 
+h3{
+  font-size: 3.5vw;
+}
+
+h4{
+  font-size: 2.5vw;
+}
+
+h5{
+  font-size: 2vw;
+  
+}
+
+p{
+  font-size: 1vw;
+}
+
+.h5container{
+  display: flex;
+  width: auto;
+  height: 10%;
+}
 
 hr{
   border:2px solid #fff;
@@ -193,6 +218,10 @@ p {
   #index-banner .section {
     top: 10%;
   }
+
+  #img-header{
+    display: none;
+  }
 }
 
 @media only screen and (max-width : 630px) {
@@ -276,8 +305,13 @@ a[href="#top"]:hover{
   height: 60px;
 }
 
+#mobile{
+  display: flex;
+  align-items: center;
+}
+
 #divmobile{
-  margin-top: 35%;
+  top: 50%;
 }
 
 #card1{
