Testando nova responsividade

--- a/css/style.css
+++ b/css/style.css
@@ -15,26 +15,7 @@
   height: 100px;
 }
 
-h1{
-  font-size: 4vw;
-}
 
-h3{
-  font-size: 3.5vw;
-}
-
-h4{
-  font-size: 2.5vw;
-}
-
-h5{
-  font-size: 2vw;
-  
-}
-
-p{
-  font-size: 1vw;
-}
 
 .h5container{
   display: flex;
@@ -225,6 +206,10 @@ p {
 }
 
 @media only screen and (max-width : 630px) {
+  .display-block{
+    display: block;
+  }
+
   #index-banner .section {
     top: 0;
   }
@@ -248,6 +233,10 @@ p {
     max-height: 350px;
     padding-right:40px;
     margin-bottom: 30px;
+  }
+
+  #mainLogo{
+    margin-top: 45px;
   }
 
 }
